--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -18,3 +18,4 @@ $grid-unit-100: $grid-unit * 100; // 800px or 50em
 $grid-unit-112: $grid-unit * 112; // 896px or 56em
 
 $breakpoint: $grid-unit-112;
+$nav-breakpoint: $grid-unit-70;
