--- a/source/stylesheets/_page__home.scss
+++ b/source/stylesheets/_page__home.scss
@@ -35,6 +35,9 @@
       height: $grid-unit-24;
       margin: $grid-unit-2 auto;
       margin-bottom: $grid-unit-2;
+      @media all and (max-width: 400px) {
+        width: 90%;
+      }
     }
   }
 
